--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     </header>
     <nav>
         <div class="link">
-            <link rel="stylesheet" href="Home: #"><a href="Home: #">Home</a>
-            <link rel="stylesheet" href="lesson03/chamber-site-plan.html"><a
-                href="Site Plan: lesson03/chamber-site-plan.html">Site Plan</a>
+            <link rel="stylesheet" href="#"><a href="#">Home</a>
+            <link rel="stylesheet" href="lesson03/chamber-site-plan.html"><a href="lesson03/chamber-site-plan.html">Site Plan</a>
             <link rel="stylesheet" href="chamber/"><a href="chamber/">Chamber</a>
             <link rel="stylesheet" href="https://www.byui.edu/"><a href="https://www.byui.edu/">BYU-Idaho</a>
             <link rel="stylesheet" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng"><a
@@ -45,12 +44,14 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024</p>
+        &copy; <span id = "currentYear"></span>
         <p>Noah Ruppe</p>
         <p>North Carolina</p>
-        <p id="last-modified"></p>
+        Last Modified: <span id = "lastModified"></span>
     </footer>
 
+
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
