--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <footer>
         &copy; <span id = "currentYear"></span>
         <p>Noah Ruppe</p>
-        <p>North Carolina</p>
+        <p>North Carolina <img src="images/flag-28577_640.png" alt="North Carolina Flag"></p>
         Last Modified: <span id = "lastModified"></span>
     </footer>
 
