--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="https://byui-cse.github.io/wdd230-course/lesson01/">Holy Layout</a></li>
+                <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
             </ul>
         </section>
         <section class="card">
