--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="This is Noah Ruppe's WDD230 Frontend Web Development course assignment portal page.  ">
+    <meta name="description"content="This is Noah Ruppe's WDD230 Frontend Web Development course assignment portal page.  ">
     <meta name="author" content="">
     <title>Noah Ruppe-WDD230-Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
@@ -18,12 +17,11 @@
     </header>
     <nav>
         <div class="link">
-            <link rel="stylesheet" href="#"><a href="#">Home</a>
-            <link rel="stylesheet" href="lesson03/chamber-site-plan.html"><a href="lesson03/chamber-site-plan.html">Site Plan</a>
-            <link rel="stylesheet" href="chamber/"><a href="chamber/">Chamber</a>
-            <link rel="stylesheet" href="https://www.byui.edu/"><a href="https://www.byui.edu/">BYU-Idaho</a>
-            <link rel="stylesheet" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng"><a
-                href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng">Scripture</a>
+            <a href="#">Home</a>
+            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+            <a href="chamber/">Chamber</a>
+            <a href="https://www.byui.edu/">BYU-Idaho</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng">Scripture</a>
         </div>
     </nav>
     <main>
@@ -55,3 +53,4 @@
 </body>
 
 </html>
+
