--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <title>Noah Ruppe-WDD230-Web Frontend Development</title>
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
