--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
+                <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles</a></li>
             </ul>
         </section>
         <section class="card">
