--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Noah Ruppe-WDD230-Web Frontend Development</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    
     <link rel="icon" href="favicon.ico">
 </head>
 
