--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design-principles</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 <body>
     <header>
@@ -16,28 +18,35 @@
         <h2>Visual Hierarchy</h2>
         <h3>Amazon</h3>
         <a href="https://www.amazon.com/">amazon.com</a>
-        <img src="images/amazon screen shot.png" alt="amazon-webpage">
+        <img src="images/rsz_amazon_screen_shot.png" alt="amazon-webpage">
         <p>Visual Hierarchy is used to rank design elements and influence in the order you want your users to view them. By using principles like contrast, scale, balance and, more, you can help establish each element in its rightful place and help the most important elements stand out. </p>
-        <p>Sizing is a very basic but crucial principle that can give elements more importance than others and help draw the viewer’s eye towards a certain area. By increasing the scale of an element, you can immediately attract the viewer’s attention. You want to be careful, however, not to enlarge too many elements or increase the size in a way that might decrease the importance of other elements on the screen.</p>
+        <p>In the above picture we can see that the way they used this principle is by enlarging the things they want you to look at, like alex and then they made the other things that are not important smaller.</p>
     </section>
     <section class="card2">
         <h2>Hicks Law</h2>
-        <h3>look</h3>
+        <h3>Amazon</h3>
         <a href="https://www.amazon.com/">amazon.com</a>
         <img src="images/amazon 1 click buy.jpg" alt="amazon-1-click-buy">
         <p>Hick's law, or the Hick Hyman Law, named after British and American psychologists William Edmund Hick and Ray Hyman, describes the time it takes for a person to make a decision as a result of the possible choices he or she has: increasing the number of choices will increase the decision time logarithmically.</p>
+        <p>In the picture above we see that Amazon has only one choice which is by now making the time you have to think about it shorter.</p>
     </section>
     <section class = "card3">
         <h2>Fitt's law</h2>
-        <h3>look</h3>
+        <h3>Spotify</h3>
         <a href="https://open.spotify.com/">Spotify</a>
         <img src="images/spotify desk top app.jpg" alt="spotify-desktop">
-        <p>Fitts's Law is a principle in human-computer interaction and ergonomics that is particularly relevant in web development. Named after psychologist Paul Fitts, the law states that the time required to rapidly move to a target area is a function of the distance to the target and the size of the target. In the context of web development, this principle is often applied to user interface design, especially in the placement and sizing of interactive elements such as buttons and links.</p>
+        <p>Fitt's law states that the amount of time required for a person to move a pointer to a target area is a function of the distance to the target divided by the size of the target. Thus, the longer the distance and the smaller the target's size, the longer it takes.</p>
+        <p>we can see that here in the above picture that the options that spotify have are spread out.</p>
+        <p></p>
     </section>
     </main>
     <footer>
-        noahruppe
+        &copy; <span id = "currentYear"></span>
+        <p>Noah Ruppe</p>
+        <p>North Carolina</p>
+        Last Modified: <span id = "lastModified"></span>
     </footer>
-    
+    <script src="scripts/getdates.js"></script>
 </body>
 </html>
+
