--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,45 +9,57 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
 </head>
+
 <body>
     <header>
         <h1>Design Principles Document </h1>
         <P>Noah Nathaniel Ruppe</P>
     </header>
     <main>
-        <section class = "card">
-        <h2>Visual Hierarchy</h2>
-        <h3>Amazon</h3>
-        <a href="https://www.amazon.com/">amazon.com</a>
-        <img src="images/rsz_amazon_screen_shot.png" alt="amazon-webpage">
-        <p>Visual Hierarchy is used to rank design elements and influence in the order you want your users to view them. By using principles like contrast, scale, balance and, more, you can help establish each element in its rightful place and help the most important elements stand out. </p>
-        <p>In the above picture we can see that the way they used this principle is by enlarging the things they want you to look at, like alex and then they made the other things that are not important smaller.</p>
-    </section>
-    <section class="card2">
-        <h2>Hicks Law</h2>
-        <h3>Amazon</h3>
-        <a href="https://www.amazon.com/">amazon.com</a>
-        <img src="images/amazon 1 click buy.jpg" alt="amazon-1-click-buy">
-        <p>Hick's law, or the Hick Hyman Law, named after British and American psychologists William Edmund Hick and Ray Hyman, describes the time it takes for a person to make a decision as a result of the possible choices he or she has: increasing the number of choices will increase the decision time logarithmically.</p>
-        <p>In the picture above we see that Amazon has only one choice which is by now making the time you have to think about it shorter.</p>
-    </section>
-    <section class = "card3">
-        <h2>Fitt's law</h2>
-        <h3>Spotify</h3>
-        <a href="https://open.spotify.com/">Spotify</a>
-        <img src="images/spotify desk top app.jpg" alt="spotify-desktop">
-        <p>Fitt's law states that the amount of time required for a person to move a pointer to a target area is a function of the distance to the target divided by the size of the target. Thus, the longer the distance and the smaller the target's size, the longer it takes.</p>
-        <p>we can see that here in the above picture that the options that spotify have are spread out.</p>
-        <p></p>
-    </section>
+        <div id = "cards">
+            <section class="card">
+                <h2>Visual Hierarchy</h2>
+                <h3>Amazon</h3>
+                <a href="https://www.amazon.com/">amazon.com</a>
+                <img src="images/rsz_amazon_screen_shot.png" alt="amazon-webpage">
+                <p>Visual Hierarchy is used to rank design elements and influence in the order you want your users to view
+                    them. By using principles like contrast, scale, balance and, more, you can help establish each element
+                    in its rightful place and help the most important elements stand out. </p>
+                <p>In the above picture we can see that the way they used this principle is by enlarging the things they
+                    want you to look at, like alex and then they made the other things that are not important smaller.</p>
+            </section>
+            <section class="card2">
+                <h2>Hicks Law</h2>
+                <h3>Amazon</h3>
+                <a href="https://www.amazon.com/">amazon.com</a>
+                <img src="images/amazon 1 click buy.jpg" alt="amazon-1-click-buy">
+                <p>Hick's law, or the Hick Hyman Law, named after British and American psychologists William Edmund Hick and
+                    Ray Hyman, describes the time it takes for a person to make a decision as a result of the possible
+                    choices he or she has: increasing the number of choices will increase the decision time logarithmically.
+                </p>
+                <p>In the picture above we see that Amazon has only one choice which is by now making the time you have to
+                    think about it shorter.</p>
+            </section>
+            <section class="card3">
+                <h2>Fitt's law</h2>
+                <h3>Spotify</h3>
+                <a href="https://open.spotify.com/">Spotify</a>
+                <img src="images/spotify desk top app.jpg" alt="spotify-desktop">
+                <p>Fitt's law states that the amount of time required for a person to move a pointer to a target area is a
+                    function of the distance to the target divided by the size of the target. Thus, the longer the distance
+                    and the smaller the target's size, the longer it takes.</p>
+                <p>we can see that here in the above picture that the options that spotify have are spread out.</p>
+                <p></p>
+            </section>
+        </div>
     </main>
     <footer>
-        &copy; <span id = "currentYear"></span>
+        &copy; <span id="currentYear"></span>
         <p>Noah Ruppe</p>
         <p>North Carolina</p>
-        Last Modified: <span id = "lastModified"></span>
+        Last Modified: <span id="lastModified"></span>
     </footer>
     <script src="scripts/getdates.js"></script>
 </body>
-</html>
 
+</html>
