--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
-                <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles</a></li>
+                <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles lesson activity</a></li>
+                <li><a href="https://noahruppe.github.io/wdd230/lesson2/design-principles">design-principles project</a></li>
             </ul>
         </section>
         <section class="card">
