--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -32,7 +32,7 @@
                 <h2>Hicks Law</h2>
                 <h3>Amazon</h3>
                 <a href="https://www.amazon.com/">amazon.com</a>
-                <img src="images/amazon 1 click buy.jpg" alt="amazon-1-click-buy">
+                <img src="images/amazon-1-click-buy.jpg" alt="amazon-1-click-buy">
                 <p>Hick's law, or the Hick Hyman Law, named after British and American psychologists William Edmund Hick and
                     Ray Hyman, describes the time it takes for a person to make a decision as a result of the possible
                     choices he or she has: increasing the number of choices will increase the decision time logarithmically.
