--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -44,7 +44,7 @@
                 <h2>Fitt's law</h2>
                 <h3>Spotify</h3>
                 <a href="https://open.spotify.com/">Spotify</a>
-                <img src="images/spotify desk top app.jpg" alt="spotify-desktop">
+                <img src="images/spotify-desktop-pic.jpg" alt="spotify-desktop">
                 <p>Fitt's law states that the amount of time required for a person to move a pointer to a target area is a
                     function of the distance to the target divided by the size of the target. Thus, the longer the distance
                     and the smaller the target's size, the longer it takes.</p>
