--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design-principles</title>
+    <meta name="description" content="this is a webpage demenstrating design principles and how to use them">
+    <meta name="author" content="Noah Ruppe">
+    <title>Design Principles</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
