--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
                 <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles lesson activity</a></li>
                 <li><a href="lesson02/design-principles.html">design-principles project</a></li>
+                <li><a href="<a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a>"></a></li>
             </ul>
         </section>
         <section class="card">
