--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img src="images/try.jpg" alt="picture of Noah Ruppe">
         <h1>Noah Nathaniel Ruppe</h1>
     </header>
+    <a id ="menu" href="#"></a>
     <nav>
         <div class="link">
             <a href="#">Home</a>
@@ -42,6 +43,7 @@
                 <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles lesson activity</a></li>
                 <li><a href="lesson02/design-principles.html">design-principles project</a></li>
                 <li><a href="<a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a>"></a></li>
+                <li><a href="https://codepen.io/Noah-Ruppe/pen/Yzgxqev">Responsive "Hamburger" Menu</a></li>
             </ul>
         </section>
         <section class="card">
