--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
         </section>
     </main>
+    <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d41535.139916574786!2d-80.8706786658637!3d35.80152925124583!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1706053535883!5m2!1sen!2sus" width="1400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
     <footer>
         &copy; <span id = "currentYear"></span>
         <p>Noah Ruppe</p>
