--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav>
         <div class="link">
             <a href="#">Home</a>
-            <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+            <a href="lesson03/chamber-site-plan.html"></a>
             <a href="chamber/">Chamber</a>
             <a href="https://www.byui.edu/">BYU-Idaho</a>
             <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng">Scripture</a>
