--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -46,7 +46,7 @@
         </div>
         <div class="webframe">
             <h1>Webframe</h1>
-            <img src="images/my webframe.png" alt="a-picture-of-my-webframe">
+            <img src="images/my-webframe.png" alt="a-picture-of-my-webframe">
         </div>
     </main>
 
