--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
                 <li><a href="lesson02/design-principles.html">design-principles project</a></li>
                 <li><a href="<a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a>"></a></li>
                 <li><a href="https://codepen.io/Noah-Ruppe/pen/Yzgxqev">Responsive "Hamburger" Menu</a></li>
+                <li><a href="https://codepen.io/blazzard-jason/pen/PoaQgXJ">CSS Pseudo-Classes</a></li>
             </ul>
         </section>
         <section class="card">
-            <h3>Information</h3>
+            <h3 class="info">Information</h3>
             <div class="placeholders">
                 <p>sunshine</p>
                 <p>page visits</p>
