--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -12,7 +12,7 @@
     <!-- site name -->
     <header>
         <h1>Statesville</h1>
-        <h2>Locals Chamber</h2>
+        <h2>Locals Chamber Of Commerce</h2>
     </header>
     <main>
         <div class="purpose">
