--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="images/try.jpg" alt="picture of Noah Ruppe">
         <h1>Noah Nathaniel Ruppe</h1>
     </header>
-    <a id ="menu" href="#"></a>
+    <span id="menu"></span>
     <nav>
         <div class="link">
             <a href="#">Home</a>
@@ -42,18 +42,15 @@
                 <li><a href="https://noahruppe.github.io/wdd230/lesson1/holygrail">Holy Layout</a></li>
                 <li><a href="https://noahruppe.github.io/wdd230/lesson2/design">Design Principles lesson activity</a></li>
                 <li><a href="lesson02/design-principles.html">design-principles project</a></li>
-                <li><a href="<a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a>"></a></li>
+                <li><a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a></li>
                 <li><a href="https://codepen.io/Noah-Ruppe/pen/Yzgxqev">Responsive "Hamburger" Menu</a></li>
                 <li><a href="https://codepen.io/blazzard-jason/pen/PoaQgXJ">CSS Pseudo-Classes</a></li>
             </ul>
         </section>
         <section class="card">
-            <h3 class="info">Information</h3>
-            <div class="placeholders">
-                <p>sunshine</p>
-                <p>page visits</p>
-            </div>
-
+            <h3>Information</h3>
+            <p>sunshine</p>
+            <p>page visits</p>
         </section>
     </main>
     <div class="map">
