--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="this is a chamber of commerce project located in statesville,NC. this Webpage is created by Noah Ruppe">
+    <meta name="author" content="Noah Ruppe">
+    <meta property="og:title" content="Locals Chamber Of Commerce">
+    <meta property="og:type" content="Website">
+    <meta property="og:image" content="https://images.locable.com/eyJidWNrZXQiOiJpbXBhY3QtcHJvZHVjdGlvbiIsImtleSI6Il9vcmlnaW5hbHMvMTc4MjUyNDctN2I2MS00Zjc5LWI0NDUtODRjMDU2Y2YyMDNmL1N0ZXZlIEJpbGxpbmdzIEFlcmlhbCAyLkpQRyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NjQwfSwianBlZyI6eyJxdWFsaXR5Ijo4MH19fQ==">
+    <meta property="URL" content="">
     <title>Locals Chamber</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="icon" href="faviconthereal.ico">
 </head>
 <body>
+    <header>
+        <img src="images/statesville-pic.png" alt="Statesville-City-logo">
+        <h1>Locals Chamber Of Commerce</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Discover</a>
+            <a href="#">Directory</a>
+            <a href="#">Join</a>
+        </nav>
+    </header>
     
 </body>
 </html>
