--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -27,6 +27,12 @@
             <a href="#">Join</a>
         </nav>
     </header>
+    <main>
+        <img src="images/MicrosoftTeams-image.png" alt="">
+        <section class="cards">
+            <h1>Current Events</h1>
+        </section>
+    </main>
     
 </body>
 </html>
