--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -32,7 +32,36 @@
         <section class="cards">
             <h1>Current Events</h1>
         </section>
+        <section class="card1">
+            <h1>Weather</h1>
+        </section>
+        <section class="signs">
+            <h1>Creative Sign Solutions</h1>
+            <div>
+                <p>If you need a sign we're your guys</p>
+                <p>Call 704-880-9292</p>
+            <div></div>
+        </section>
+        <section class="roofing">
+            <h1>Randys Roofing CO.</h1>
+            <div>
+                <p>We do the job right!</p>
+                <p>Call 704-775-5566</p>
+            </div>
+        </section>
+        <section class="land">
+            <h1>Smiths Landscaping</h1>
+            <div>
+                <p>We pride ourselfs on a job well done</p>
+                <p>Call 980-458-6472</p>
+            </div>
+        </section>
     </main>
-    
+    <footer>
+        &copy; <span id = "currentYear"></span>
+        <p>Noah Ruppe</p>
+        Last Modified: <span id = "lastModified"></span>
+    </footer>
+    <script src="scripts/responsive.js"></script>
 </body>
 </html>
