--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="this is the site plan that I am building to prepare to make a webpage">
+    <meta name="author" content="Noah Ruppe">
     <title>Chamber Site Plan</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
@@ -11,8 +13,8 @@
 <body>
     <!-- site name -->
     <header>
-        <h1>Statesville</h1>
-        <h2>Locals Chamber Of Commerce</h2>
+        <h1>Site PLan</h1>
+        <h2>Statesville Locals Chamber Of Commerce</h2>
     </header>
     <main>
         <div class="purpose">
@@ -27,7 +29,7 @@
             <p>3: What is the role of a member of the chamber?</p>
         </div>
         <div class="color">
-            <h1>Color Pallete</h1>
+            <h1>Color Schema</h1>
             <p class="p1">#F5F3F4</p>
             <p class="p2">#660708</p>
             <p class="p3">#000</p>
@@ -45,7 +47,7 @@
             <p class="p12">2: EB Garamond</p>
         </div>
         <div class="webframe">
-            <h1>Webframe</h1>
+            <h1>Wireframe</h1>
             <img src="images/my-webframe.png" alt="a-picture-of-my-webframe">
         </div>
     </main>
