--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -14,7 +14,7 @@
     <!-- site name -->
     <header>
         <h1>Site PLan</h1>
-        <h2>Statesville Locals Chamber Of Commerce</h2>
+        <h2> Site Name: Locals Chamber Of Commerce</h2>
     </header>
     <main>
         <div class="purpose">
