--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -18,18 +18,18 @@
     </header>
     <main>
         <div class="purpose">
-            <h1>Site Purpose</h1>
+            <h1>Site Plan: Site Purpose</h1>
             <p>1: The purpose of this website is to provide a place where local businesses can get in touch with each other and grow their businesses</p>
             <p>2:The other purpose for this website is to provide knowledge of local events happening in the area which could be usefull for local business wanting to be apart of such events</p>
         </div>
         <div class="scenerios">
-            <h1>Scenarios</h1>
+            <h1>Site Plan: Scenarios</h1>
             <p>1: What events will the chamber be holding this month that promote business-to-business networking?</p>
             <p>2: How can I create a event?</p>
             <p>3: What is the role of a member of the chamber?</p>
         </div>
         <div class="color">
-            <h1>Color Schema</h1>
+            <h1>Site Plan: Color Schema</h1>
             <p class="p1">#F5F3F4</p>
             <p class="p2">#660708</p>
             <p class="p3">#000</p>
@@ -42,12 +42,12 @@
             <p class="p10">Footer Font: #D3D3D3</p>
         </div>
         <div class="type">
-            <h1>Typography</h1>
+            <h1>Site Plan: Typography</h1>
             <p class="p11">1: Bebas Neue</p>
             <p class="p12">2: EB Garamond</p>
         </div>
         <div class="webframe">
-            <h1>Wireframe</h1>
+            <h1>Site Plan: Wireframe</h1>
             <img src="images/my-webframe.png" alt="a-picture-of-my-webframe">
         </div>
     </main>
