--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -47,8 +47,12 @@
             <p class="p12">2: EB Garamond</p>
         </div>
         <div class="webframe">
-            <h1>Site Plan: Wireframe</h1>
+            <h1>Site Plan: Wireframe Large View</h1>
             <img src="images/my-webframe.png" alt="a-picture-of-my-webframe">
+        </div>
+        <div class="wireframe">
+            <h1>Site Plan: Wireframe Small View</h1>
+            <img src="images/wireframe.png" alt="mobile view">
         </div>
     </main>
 
