--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -20,11 +20,14 @@
     <header>
         <img src="images/statesville-pic.png" alt="Statesville-City-logo">
         <h1>Locals Chamber Of Commerce</h1>
+        <span id="menu"></span>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Discover</a>
-            <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <div class="link">
+                <a href="index.html">Home</a>
+                <a href="#">Discover</a>
+                <a href="#">Directory</a>
+                <a href="#">Join</a>
+            </div>
         </nav>
     </header>
     <main>
