--- a/Chamber/index.html
+++ b/Chamber/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="this is a chamber of commerce project located in statesville,NC. this Webpage is created by Noah Ruppe">
     <meta name="author" content="Noah Ruppe">
     <meta property="og:title" content="Locals Chamber Of Commerce">
-    <meta property="og:type" content="Website">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.locable.com/eyJidWNrZXQiOiJpbXBhY3QtcHJvZHVjdGlvbiIsImtleSI6Il9vcmlnaW5hbHMvMTc4MjUyNDctN2I2MS00Zjc5LWI0NDUtODRjMDU2Y2YyMDNmL1N0ZXZlIEJpbGxpbmdzIEFlcmlhbCAyLkpQRyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NjQwfSwianBlZyI6eyJxdWFsaXR5Ijo4MH19fQ==">
     <meta property="URL" content="">
-    <title>Locals Chamber</title>
+    <title>Locals Chamber Of Commerce</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -33,27 +33,27 @@
     <main>
         <img src="images/MicrosoftTeams-image.png" alt="">
         <section class="cards">
-            <h1>Current Events</h1>
+            <h2>Current Events</h2>
         </section>
         <section class="card1">
-            <h1>Weather</h1>
+            <h2>Weather</h2>
         </section>
         <section class="signs">
-            <h1>Creative Sign Solutions</h1>
+            <h2>Creative Sign Solutions</h2>
             <div>
                 <p>If you need a sign we're your guys</p>
                 <p>Call 704-880-9292</p>
             <div></div>
         </section>
         <section class="roofing">
-            <h1>Randys Roofing CO.</h1>
+            <h2>Randys Roofing CO.</h2>
             <div>
                 <p>We do the job right!</p>
                 <p>Call 704-775-5566</p>
             </div>
         </section>
         <section class="land">
-            <h1>Smiths Landscaping</h1>
+            <h2>Smiths Landscaping</h2>
             <div>
                 <p>We pride ourselfs on a job well done</p>
                 <p>Call 980-458-6472</p>
