--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <img src="images/statesville-pic.png" alt="Statesville-City-logo">
+        <img src="images/statesville-pic.webp" alt="Statesville-City-logo">
         <h1>Locals Chamber Of Commerce</h1>
         <span id="menu"></span>
         <nav>
