--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <img src="images/statesville-pic.webp" alt="Statesville-City-logo">
-        <h1> Statesville: Locals Chamber Of Commerce</h1>
+        <h1>Locals Chamber Of Commerce</h1>
         <span id="menu"></span>
         <nav>
             <div class="link">
@@ -43,7 +43,7 @@
             <div>
                 <p>If you need a sign we're your guys</p>
                 <p>Call 704-880-9292</p>
-            <div></div>
+            <div>
         </section>
         <section class="roofing">
             <h2>Randys Roofing CO.</h2>
