--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,11 +39,11 @@
             <h2>Weather</h2>
         </section>
         <section class="signs">
-            <h2>Creative Sign Solutions</h2>
+        <h2>Creative Sign Solutions</h2>
             <div>
                 <p>If you need a sign we're your guys</p>
                 <p>Call 704-880-9292</p>
-            <div>
+            </div>
         </section>
         <section class="roofing">
             <h2>Randys Roofing CO.</h2>
