--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,6 +65,8 @@
         <p>Noah Ruppe</p>
         Last Modified: <span id = "lastModified"></span>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
     <script src="scripts/responsive.js"></script>
 </body>
 </html>
