--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <img src="images/statesville-pic.webp" alt="Statesville-City-logo">
-        <h1>Locals Chamber Of Commerce</h1>
+        <h1>Locals Chamber of Commerce</h1>
         <span id="menu"></span>
         <nav>
             <div class="link">
