--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,9 +34,11 @@
         <img src="images/MicrosoftTeams-image.png" alt="">
         <section class="cards">
             <h2>Current Events</h2>
+            <p>local food court holding business meeting</p>
         </section>
         <section class="card1">
             <h2>Weather</h2>
+            <p>weather is sunny</p>
         </section>
         <section class="signs">
         <h2>Creative Sign Solutions</h2>
