--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,6 +64,8 @@
     </main>
     <footer>
         &copy; <span id = "currentYear"></span>
+        <p>WDD 230 Project</p>
+        <p>Contact Info: 704-880-7122</p>
         <p>Noah Ruppe</p>
         Last Modified: <span id = "lastModified"></span>
     </footer>
