--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <li><a href="https://codepen.io/Noah-Ruppe/pen/zYbdqoK">CSS Pseudo-elements</a></li>
                 <li><a href="https://codepen.io/Noah-Ruppe/pen/Yzgxqev">Responsive "Hamburger" Menu</a></li>
                 <li><a href="https://codepen.io/blazzard-jason/pen/PoaQgXJ">CSS Pseudo-Classes</a></li>
+                <li><a href="lesson05/bom.html">BOM List</a></li>
             </ul>
         </section>
         <section class="card">
