--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,6 +29,13 @@
                 <a href="#">Join</a>
             </div>
         </nav>
+        <div class="background-box">
+            <label class="toggle-box">
+                <input type="checkbox" id="checkbox">
+                <div class="circle"></div>
+            </label>
+
+        </div>
     </header>
     <main>
         <img src="images/MicrosoftTeams-image.png" alt="">
