--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my project to demonstrate my DOM knoledge and to let you write a scripture on the webpage">
     <meta name="author" content="Noah Ruppe">
+    <link rel="stylesheet" href="styles/base.css">
     <title>Book of Mormon - Top 10</title>
 </head>
 <body>
