--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
         <div class="background-box">
             <label class="toggle-box">
                 <input type="checkbox" id="checkbox">
-                <div class="circle"></div>
+                <span class="circle"></span>
             </label>
         </div>
     </header>
