--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <li><a href="lesson05/bom.html">BOM List</a></li>
                 <li><a href="lesson03/images/landscape.webp">WebP</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive images</a></li>
+                <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
             </ul>
         </section>
         <section class="cards">
