--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="cards">
             <h3>Information</h3>
             <p>sunshine</p>
-            <p>page visits</p>
+            <p><span class="label">Number of Visits: </span><span class="visits"></span></p>
         </section>
     </main>
     <div class="map">
