--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -36,7 +36,7 @@
             </label>
         </div>
     </header>
-    <main>
+    <main class="discover-main">
        <section class="sidebar">
         <h1>Welcome To The Beautiful City Of Statesville</h1>
         <img class="statesville-pic" src="images/statesville-pic.webp" alt="statesville logo" loading="lazy">
@@ -60,12 +60,17 @@
        <section class="main-photos">
         <h1>Statesville Civic Center</h1>
         <picture class="civic">
-            <source srcset="images/rsz_1rsz_civic_center.jpg" media="(max-width: 400px)" loading="lazy">
+            <source srcset="images/civic-center-small.webp" media="(max-width: 400px)" loading="lazy">
+            <source srcset="images/civic-center.webp" media="(max-width: 960px)" loading="lazy">
             <img src="images/civic center.webp" alt="statesville civic center" loading="lazy">
         </picture>
         <p class="c1">Welcome to our Civic Center, your premier destination for hosting a diverse range of events tailored to your every need. Whether you're planning a professional business gathering or a cherished personal celebration, our versatile venue offers the perfect space and amenities to bring your event to life.</p>
         <h2>Historic Fort Dobbs</h2>
-        <img class="fort" src="images/fort-dobbs.webp" alt="fort-dobbs" loading="lazy">
+        <picture class="fort">
+            <source srcset="images/fort-dobbs-small.webp" media="(max-width:400px)" loading="lazy">
+            <source srcset="images/medium-fort.webp" media="(max-width:960px)" loading="lazy">
+            <img src="images/fort-dobbs.webp" alt="fort-dobbs" loading="lazy">
+        </picture>
         <p class="f1">Fort Dobbs was the only permanent frontier provincial fort in the colony of North Carolina. Construction began in late 1755 and was completed one year later. It served as the military headquarters for the frontier company (approximately fifty men) as well as a safe-haven for settlers.</p>
         <h3>Relaxing Hobbies</h3>
         <img class="golf" src="images/golf.webp" alt="golf course" loading="lazy">
