--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="link">
                 <a href="index.html">Home</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
                 <a href="#">Directory</a>
                 <a href="#">Join</a>
             </div>
