--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -62,7 +62,7 @@
         <picture class="civic">
             <source srcset="images/civic-center-small.webp" media="(max-width: 400px)">
             <source srcset="images/civic-center.webp" media="(max-width: 960px)">
-            <img src="images/civic center.webp" alt="statesville civic center" loading="lazy">
+            <img src="images/civic-center-large.webp" alt="statesville civic center" loading="lazy">
         </picture>
         <p class="c1">Welcome to our Civic Center, your premier destination for hosting a diverse range of events tailored to your every need. Whether you're planning a professional business gathering or a cherished personal celebration, our versatile venue offers the perfect space and amenities to bring your event to life.</p>
         <h2>Historic Fort Dobbs</h2>
