--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -38,7 +38,7 @@
     </header>
     <main class="discover-main">
        <section class="sidebar">
-        <h1>Welcome To The Beautiful City Of Statesville</h1>
+        <h2 class="old">Welcome To The Beautiful City Of Statesville</h2>
         <img class="statesville-pic" src="images/statesville-pic.webp" alt="statesville logo" loading="lazy">
         <p>Welcome to Statesville, NC, a vibrant community nestled in the heart of North Carolina. With a population of 27.8k, our city boasts a diverse and thriving population, with 94.5% proudly calling themselves citizens.</p>
         <p>In recent years, Statesville has experienced steady growth, drawing individuals and families alike, thanks in part to our strategic location near the bustling metropolis of Charlotte. Situated at the crossroads of two of the busiest highways, I-40 and I-77, our city enjoys unparalleled connectivity, making us a hub of activity and attention.</p>
@@ -58,14 +58,14 @@
         </div>
        </section>
        <section class="main-photos">
-        <h1>Statesville Civic Center</h1>
+        <h2 class="theold">Statesville Civic Center</h2>
         <picture class="civic">
             <source srcset="images/civic-center-small.webp" media="(max-width: 400px)">
             <source srcset="images/civic-center.webp" media="(max-width: 960px)">
             <img src="images/civic-center-large.webp" alt="statesville civic center" loading="lazy">
         </picture>
         <p class="c1">Welcome to our Civic Center, your premier destination for hosting a diverse range of events tailored to your every need. Whether you're planning a professional business gathering or a cherished personal celebration, our versatile venue offers the perfect space and amenities to bring your event to life.</p>
-        <h2>Historic Fort Dobbs</h2>
+        <h2 class="theolds">Historic Fort Dobbs</h2>
         <picture class="fort">
             <source srcset="images/fort-dobbs-small.webp" media="(max-width:400px)">
             <source srcset="images/medium-fort.webp" media="(max-width:960px)">
