--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -36,7 +36,7 @@
             </label>
         </div>
     </header>
-    <main class="discover-main">
+    <main>
        <section class="sidebar">
         <h2 class="old">Welcome To The Beautiful City Of Statesville</h2>
         <img class="statesville-pic" src="images/statesville-pic.webp" alt="statesville logo" loading="lazy">
