--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -73,16 +73,32 @@
         </picture>
         <p class="f1">Fort Dobbs was the only permanent frontier provincial fort in the colony of North Carolina. Construction began in late 1755 and was completed one year later. It served as the military headquarters for the frontier company (approximately fifty men) as well as a safe-haven for settlers.</p>
         <h3>Relaxing Hobbies</h3>
-        <img class="golf" src="images/golf.webp" alt="golf course" loading="lazy">
+        <picture class="golf">
+            <source srcset="images/golf-small.webp" media="(max-width:400px)">
+            <source srcset="images/golf-medium.webp" media="(max-width:960px)">
+            <img src="images/golf.webp" alt="golf course" loading="lazy">
+        </picture>
         <p class="g1">Discover the charm of Statesville, where lush green fairways beckon amidst a backdrop of scenic beauty. With a plethora of premier golf courses, our city is not only a golfer's paradise but also a hub for thriving business gatherings and charitable endeavors. These meticulously manicured courses serve as more than just venues for tee-offs; they are the dynamic epicenters where business connections flourish and philanthropic efforts thrive.</p>
         <h4>Beautiful Parks</h4>
-        <img class="park" src="images/park.webp" alt="park in statesville" loading="lazy">
+        <picture class="park">
+            <source srcset="images/park-small.webp" media="(max-width:400px)">
+            <source srcset="images/park-medium.webp" media="(max-width:960px)">
+            <img src="images/park.webp" alt="park in statesville" loading="lazy">
+        </picture>
         <p class="pa1">These parks here in statesville serve as prime locations for public events and gatherings, where our community spirit shines brightly for all to see. Our vibrant parks serve as bustling hubs of community activity, drawing people from all walks of life to enjoy the outdoors.</p>
         <h5>Great Events</h5>
-        <img class="baloon" src="images/baloon.webp" alt="hot air baloon" loading="lazy">
+        <picture class="baloon">
+            <source srcset="images/balloon-small.webp" media="(max-width:400px)">
+            <source srcset="images/balloon-medium.webp" media="(max-width:960px)">
+            <img src="images/baloon.webp" alt="hot air baloon" loading="lazy">
+        </picture>
         <p class="b1">Prepare to be uplifted by one of Statesville's most anticipated events of the year: our spectacular Balloon Festival. Each year, our town becomes a beacon of excitement as people from far and wide flock to witness the mesmerizing sight of colorful hot air balloons painting the sky. It's a celebration that unites our community and welcomes visitors with open arms, offering an unforgettable experience for all who attend.</p>
         <h6>Great Night Life</h6>
-        <img class="downtown" src="images/downtown.webp" alt="downtown statesville" loading="lazy">
+        <picture class="downtown">
+            <source srcset="images/downtown-small.webp" media="(max-width:400px)">
+            <source srcset="images/downtown-medium.webp" media="(max-width:960px)">
+            <img src="images/downtown.webp" alt="downtown statesville" loading="lazy">
+        </picture>
         <p class="d1">Experience Statesville's vibrant nightlife, where our diverse restaurants draw crowds from near and far. Many of these establishments are Chamber of Commerce members, offering not just exceptional dining but also networking opportunities. Feel free to leave your business cards at these hotspots, where connections thrive and opportunities await. Come, savor the flavors of our city and discover why our nightlife is second to none.</p>
 
 
