--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                 <li><a href="lesson03/images/landscape.webp">WebP</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive images</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
+                <li><a href="lesson08/tablebuild.html"></a></li>
+                <li><a href="lesson08/form-start/form-start/index.html"></a></li>
             </ul>
         </section>
         <section class="cards">
