--- a/record.html
+++ b/record.html
@@ -36,36 +36,7 @@
         </div>
     </nav>
     <main>
-        <div class="form-box">
-            <form method="get" action="record.html">
-                <fieldset>
-                    <p>Account Set Up</p>
-                    <label class="username">Username* <input type="text" id="the-username" name="username" required></label>
-                    <label>Password* <input type="password" id="the-password1" name="password" pattern="[A-Za-z0-9]{8,}" title="Value must be at least 8 characters long" required></label>
-                    <label>Confirm Password* <input type="password" id="the-password2" name="confirm-password" pattern="[A-Za-z0-9]{8,}" title="Password must be the same" required> <span id="form-message"></span> </label>
-
-                    <label>Email* <input type="email" id="the-email" name="email" required pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" title="please enter a valid email adress"></label>
-                    <label>Page Rating <div id="rangvalue">0</div> <input type="range" id="rating" name="rating" min="0" max="10" value="0" step="1" list="rangevalues"></label>
-                    <datalist id="rangevalues">
-                        <option value="0">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                        <option value="9">9</option>
-                        <option value="10">10</option>
-                    </datalist>
-
-                </fieldset>
-                <input class="submit" type="submit" value="Set up Now">
-            </form>
-
-
-        </div>
+       <p>Thank you for submitting your form</p>
     </main>
     <footer>
         &copy; <span id = "currentYear"></span>
