--- a/form.html
+++ b/form.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="this is Noah Ruppes page portal for WDD 230 he will be making content on this page to test his skills in web development">
+    <meta name="description" content="this webpage is to test my ability to make html forms and to give me practice">
     <meta name="author" content="">
     <meta property="og:title" content="Noah Ruppes portal">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.locable.com/eyJidWNrZXQiOiJpbXBhY3QtcHJvZHVjdGlvbiIsImtleSI6Il9vcmlnaW5hbHMvMTc4MjUyNDctN2I2MS00Zjc5LWI0NDUtODRjMDU2Y2YyMDNmL1N0ZXZlIEJpbGxpbmdzIEFlcmlhbCAyLkpQRyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6NjQwfSwianBlZyI6eyJxdWFsaXR5Ijo4MH19fQ==">
     <meta property="og:url" content="https://noahruppe.github.io/wdd230/">
-    <title>Noah Ruppe - WDD 230 - Web Frontend Development</title>
+    <title>Html Forms</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
